# RiftCastDepth

./: .gitignore  CMakeLists.txt  calibration_dome.json  client_config.json  config_synthetic_open_cube_12cams.json  config_synthetic_open_cube_15cams.json  config_synthetic_open_cube_8cams.json  config_vci.json  convert_masks.py  create_dataset.py  data_analysis.ipynb  final_thesis_changes.txt  geometry_diff.txt  my_thesis_changes_clean.txt  pth_analyze.py
2026_02_03_orbbec_test/: calibration_dome.json
2026_02_03_orbbec_test_001/: calibration_dome.json
RIFTCast/src/riftcast/_C/: CMakeLists.txt
RIFTCast/src/riftcast/_C/include/riftcast/: DatasetImporter.h  GeometryModule.h
RIFTCast/src/riftcast/_C/shader/: rift.fs
RIFTCast/src/riftcast/_C/src/: DatasetImporter.cpp  GeometryModule.cpp  InpaintingModule.cpp  RenderModule.cpp
export_depth_ON/: camera_debug.json
export_depth_eimer/frame_00000/: correct_concarve.py  debug.py  export_depth.py  multiple_depth_usage.py
export_depth_experimente_3/: camera_debug.json
export_depth_experimente_3/frame_00000/: export_mesh.py
runtime/: README.md  export_all_bins_to_meshes.py
runtime/configs/: config_synthetic_open_cube_8cams_runtime_depth_fusion_mode_none_no_depth.json  config_synthetic_open_cube_8cams_runtime_depth_fusion_mode_real_data.json  config_synthetic_open_cube_8cams_runtime_depth_fusion_mode_synthetic_data.json  config_vci_runtime_depth_fusion_mode_none_no_depth.json  config_vci_runtime_depth_fusion_mode_real_data.json  config_vci_runtime_depth_fusion_mode_synthetic_data.json
scripts/: convert_png_to_jpg.py  export_cams_synth.py  generate_gt_mesh.py  generate_synthetic_open_cube_8cams.py  plot_camera_export.py  plot_cameras.py  plot_cams.ipynb  test_depths.cpp
src/RIFTCast_client/RIFTCast_exporter/: source.cpp
src/RIFTCast_exporter/: CMakeLists.txt  source.cpp
src/RIFTCast_server/: source.cpp
